syntax = "proto3";

package eikv.sst;

message Entry {
  uint32 shared_len = 1;
  bytes unshared_key = 2;
  uint64 seq = 3;
  optional bytes value = 4;
}

message EntryGroup { repeated Entry entries = 1; }

message DataBlockPayload {
  bytes entrygroups = 1;
  repeated fixed32 restart_points = 2;
}

message DataBlock {
  bytes payload = 1;
  bytes min_user_key = 2;
  optional bytes filter = 3;
}

message Footer {
  uint64 data_block_end = 1;
  uint32 data_block_count = 2;
  uint64 index_block_start = 3;
  uint64 index_block_end = 4;
  bytes min_user_key = 5;
  bytes max_user_key = 6;
}
